# cpp-compilation-demo

./: .clang-format  CMakeLists.txt  README.md  main.cpp
